// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Filter Header should show a Reset All link when this not a "singled" filter 1`] = `
<pf-filter-header
  resetAll={[Function EventEmitter]}
  singled="false"
>
  <div
    class="filter-header"
  >
    <div>
      Jobs: 
      <strong>
        
      </strong>
    </div>
    
    <div
      class="reset-filters"
    >
       Reset All 
    </div>
  </div>
</pf-filter-header>
`;

exports[`Project - Add Data - Filter Header should show a formatted number of results 1`] = `
<pf-filter-header
  numberOfResults={[Function Number]}
  resetAll={[Function EventEmitter]}
>
  <div
    class="filter-header"
  >
    <div>
      Jobs: 
      <strong>
        3,500
      </strong>
    </div>
    
    <div
      class="reset-filters"
    >
       Reset All 
    </div>
  </div>
</pf-filter-header>
`;
